--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.8",
+    "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.2.8",
     "@angular/compiler": "^15.2.8",
     "@angular/core": "^15.2.8",
     "@angular/forms": "^15.2.8",
+    "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.8",
     "@angular/platform-browser-dynamic": "^15.2.8",
     "@angular/router": "^15.2.8",
+    "chart.js": "^4.4.0",
+    "d3": "^7.8.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -36,6 +40,7 @@
     "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "~15.2.7",
     "@angular/compiler-cli": "^15.2.8",
+    "@types/d3": "^7.4.3",
     "@types/jasmine": "~4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
